Actions
Bug #9407
closedfctl: this statement may fall through
Start date:
2018-03-28
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
issue found by gcc 7 build:
../../common/io/fibre-channel/impl/fctl.c:2027:22: error: this statement may fall through [-Werror=implicit-fallthrough=] case R_CTL_ELS_RSP: { ^ ../../common/io/fibre-channel/impl/fctl.c:2040:2: note: here default: ^~~~~~~ cc1: all warnings being treated as errors
Updated by Electric Monk over 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 0156311c9f72cdfe0968bb696336ea1b7bf9befa
commit 0156311c9f72cdfe0968bb696336ea1b7bf9befa Author: Toomas Soome <tsoome@me.com> Date: 2018-04-23T16:15:40.000Z 9407 fctl: this statement may fall through Reviewed by: Jason King <jason.brian.king@gmail.com> Reviewed by: Sebastian Wiedenroth <sebastian.wiedenroth@skylime.net> Approved by: Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org>
Actions