9407 fctl: this statement may fall through Reviewed by: Jason King <jason.brian.king@gmail.com> Reviewed by: Sebastian Wiedenroth <sebastian.wiedenroth@skylime.net> Approved by: Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org>